--- a/eventapi/html/allevents/infoLibrary.html
+++ b/eventapi/html/allevents/infoLibrary.html
@@ -48,7 +48,7 @@
                 <div class="row">
                     <div class="col-md-4" style="font-family: 'Abril Fatface', cursive;">
                         <div class="card special-skill-item border-0">
-                            <div class="card-header bg-transparent border-0"><i class="icon ion-ios-star-outline"></i></div>
+                            <div class="card-header bg-transparent border-0"><img src="assets/img/unnamed.jpg" style="width: 220px;"></div>
                             <div class="card-body">
                                 <h3 class="card-title" data-bs-hover-animate="bounce" style="font-family: 'Abril Fatface', cursive;color: rgb(3,3,3);font-size: 25px;"><a href="https://www.ligo.caltech.edu/page/educational-resources">Educational Resources</a><br></h3>
                                 <p class="card-text">Whether you're a K-12 educator, a parent, or an interested student, you should browse our education web pages. There's something fun and educational here for everyone.<br></p>
@@ -57,7 +57,7 @@
                     </div>
                     <div class="col-md-4" style="font-family: 'Abril Fatface', cursive;">
                         <div class="card special-skill-item border-0">
-                            <div class="card-header bg-transparent border-0"><i class="icon ion-ios-lightbulb-outline"></i></div>
+                            <div class="card-header bg-transparent border-0"><img src="assets/img/unnamed.jpg" style="width: 220px;"></div>
                             <div class="card-body">
                                 <p class="text-center card-text" data-bs-hover-animate="bounce" style="font-size: 22px;"><br><a href="https://gracedb.ligo.org/superevents/public/O3/"><strong>PUBLIC ALERT BY LIGO (EXTERNAL DATA)</strong></a><br></p>
                             </div>
@@ -65,7 +65,7 @@
                     </div>
                     <div class="col-md-4" style="font-family: 'Abril Fatface', cursive;">
                         <div class="card special-skill-item border-0">
-                            <div class="card-header bg-transparent border-0"><i class="icon ion-ios-gear-outline"></i></div>
+                            <div class="card-header bg-transparent border-0"><img src="assets/img/unnamed.jpg" style="width: 220px;"></div>
                             <div class="card-body" style="font-size: 22px;">
                                 <p class="card-text" data-bs-hover-animate="bounce"><a href="https://www.zooniverse.org/projects/zooniverse/gravity-spy"><strong>GRAVITY SPY</strong></a><br></p>
                             </div>
@@ -78,26 +78,24 @@
                 <div class="row">
                     <div class="col-md-4" style="font-family: 'Abril Fatface', cursive;">
                         <div class="card special-skill-item border-0">
-                            <div class="card-header bg-transparent border-0"><i class="icon ion-ios-star-outline"></i></div>
+                            <div class="card-header bg-transparent border-0"><img src="assets/img/rjulve32747999-nasa01-estados-unidos-2016-fica-facilitada-181203134335-1543841131889.jpg" style="width: 220px;"></div>
                             <div class="card-body">
-                                <h3 class="card-title" data-bs-hover-animate="bounce" style="font-family: 'Abril Fatface', cursive;color: rgb(3,3,3);font-size: 20px;"><a href="https://play.google.com/store/apps/details?id=org.laserlabs.chirp"><strong><span style="text-decoration: underline;">LIGO ANDROID</span></strong></a><br></h3>
+                                <h3 class="card-title" data-bs-hover-animate="bounce" style="font-family: 'Abril Fatface', cursive;color: rgb(3,3,3);font-size: 20px;"><a href="https://play.google.com/store/apps/details?id=org.laserlabs.chirp"><strong>LIGO ANDROID</strong></a><br></h3>
                                 <p class="card-text"><br></p>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-4" style="font-family: 'Abril Fatface', cursive;">
                         <div class="card special-skill-item border-0">
-                            <div class="card-header bg-transparent border-0"><i class="icon ion-ios-lightbulb-outline"></i></div>
-                            <div class="card-body">
-                                <p class="text-center card-text" data-bs-hover-animate="bounce" style="font-size: 20px;"><br><a href="https://gracedb.ligo.org/superevents/public/O3/"><strong>PUBLIC ALERT BY LIGO (EXTERNAL DATA)</strong></a><br></p>
-                            </div>
+                            <div class="card-header bg-transparent border-0"><img src="assets/img/rjulve32747999-nasa01-estados-unidos-2016-fica-facilitada-181203134335-1543841131889.jpg" style="width: 220px;"></div>
+                            <div class="card-body"><a class="card-link" href="https://www.ligo.org/sp/science/Publication-GW170817MMA/"><br><strong>BINARY SYSTEM OF NEUTRON STARS</strong><br></a></div>
                         </div>
                     </div>
                     <div class="col-md-4" style="font-family: 'Abril Fatface', cursive;">
                         <div class="card special-skill-item border-0">
-                            <div class="card-header bg-transparent border-0"><i class="icon ion-ios-gear-outline"></i></div>
+                            <div class="card-header bg-transparent border-0"><img src="assets/img/PngItem_2522307.png" style="width: 89px;"></div>
                             <div class="card-body">
-                                <p class="card-text" data-bs-hover-animate="bounce" style="font-size: 20px;"><a href="LEARN.html"><strong><span style="text-decoration: underline;">LEARN</span></strong></a><strong><span style="text-decoration: underline;">&nbsp;</span></strong><a href="LEARN.html"><strong>GRAVITY</strong></a><br></p>
+                                <p class="card-text" data-bs-hover-animate="bounce" style="font-size: 20px;"><a href="Learn.html"><strong>LEARN GRAVITY</strong></a><br></p>
                             </div>
                         </div>
                     </div>
@@ -108,7 +106,7 @@
                 <div class="row">
                     <div class="col-md-4" style="font-family: 'Abril Fatface', cursive;">
                         <div class="card special-skill-item border-0">
-                            <div class="card-header bg-transparent border-0"><i class="icon ion-ios-star-outline"></i></div>
+                            <div class="card-header bg-transparent border-0"><img src="assets/img/GWvisual.jpg" style="width: 197px;"></div>
                             <div class="card-body">
                                 <h3 data-bs-hover-animate="bounce" style="font-family: 'Abril Fatface', cursive;color: rgb(3,3,3);"><a href="https://spaceplace.nasa.gov/gravitational-waves/sp/" style="font-size: 20px;"><br>GRAVITATIONAL WAVES<br></a><br></h3>
                                 <p class="card-text"><br></p>
@@ -117,43 +115,16 @@
                     </div>
                     <div class="col-md-4" style="font-family: 'Abril Fatface', cursive;">
                         <div class="card special-skill-item border-0">
-                            <div class="card-header bg-transparent border-0"><i class="icon ion-ios-lightbulb-outline"></i></div>
+                            <div class="card-header bg-transparent border-0"><img src="assets/img/1366_2000.jpg" style="width: 304px;"></div>
                             <div class="card-body">
                                 <p class="text-center card-text" data-bs-hover-animate="bounce"></p><a class="card-link" href="https://spaceplace.nasa.gov/supernova/en/" style="font-size: 20px;"><strong>SUPERNOVA</strong></a></div>
                         </div>
                     </div>
                     <div class="col-md-4" style="font-family: 'Abril Fatface', cursive;">
                         <div class="card special-skill-item border-0">
-                            <div class="card-header bg-transparent border-0"><i class="icon ion-ios-gear-outline"></i></div>
+                            <div class="card-header bg-transparent border-0"><img src="assets/img/electromagnetica.jpg" style="width: 220px;"></div>
                             <div class="card-body">
-                                <p class="card-text" data-bs-hover-animate="bounce"><a href="https://spaceplace.nasa.gov/magic-windows/en/" style="font-size: 20px;"><strong><span style="text-decoration: underline;">ELECTROMAGNETIC SPECTRUM</span></strong></a><br></p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="container">
-                <div class="heading"></div>
-                <div class="row">
-                    <div class="col-md-4" style="font-family: 'Abril Fatface', cursive;">
-                        <div class="card special-skill-item border-0">
-                            <div class="card-header bg-transparent border-0"></div>
-                        </div>
-                    </div>
-                    <div class="col-md-4" style="font-family: 'Abril Fatface', cursive;">
-                        <div class="card special-skill-item border-0">
-                            <div class="card-header bg-transparent border-0"><i class="icon ion-ios-lightbulb-outline"></i></div>
-                            <div class="card-body">
-                                <h3 data-bs-hover-animate="bounce" style="font-family: 'Abril Fatface', cursive;color: rgb(3,3,3);"><a href="https://www.ligo.org/sp/science/Publication-GW170817MMA/"><br><strong><span style="text-decoration: underline;">BINARY SYSTEM OF NEUTRON STARS</span></strong><br></a><br></h3>
-                                <p class="card-text"><br></p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4" style="font-family: 'Abril Fatface', cursive;">
-                        <div class="card special-skill-item border-0">
-                            <div class="card-header bg-transparent border-0"></div>
-                            <div class="card-body">
-                                <p class="card-text" data-bs-hover-animate="bounce"><br></p>
+                                <p class="card-text" data-bs-hover-animate="bounce"><a href="https://spaceplace.nasa.gov/magic-windows/en/" style="font-size: 20px;"><strong>ELECTROMAGNETIC SPECTRUM</strong></a><br></p>
                             </div>
                         </div>
                     </div>
@@ -169,7 +140,7 @@
     <footer
         class="page-footer">
         <div class="container" style="font-family: Sriracha, cursive;">
-            <div class="links"><a href="aboutus.html" style="font-family: 'Abril Fatface', cursive;">About us</a></div><a href="contact.html">Contact with us</a>
+            <div class="links"><a href="../aboutus.html" style="font-family: 'Abril Fatface', cursive;">About us</a></div><a href="../contact.html">Contact with us</a>
             <div class="social-icons"></div>
         </div>
         </footer>
