--- a/eventapi/html/allevents/infoLibrary.html
+++ b/eventapi/html/allevents/infoLibrary.html
@@ -95,7 +95,7 @@
                         <div class="card special-skill-item border-0">
                             <div class="card-header bg-transparent border-0"><img src="assets/img/PngItem_2522307.png" style="width: 89px;"></div>
                             <div class="card-body">
-                                <p class="card-text" data-bs-hover-animate="bounce" style="font-size: 20px;"><a href="learn.html"><strong>LEARN GRAVITY</strong></a><br></p>
+                                <p class="card-text" data-bs-hover-animate="bounce" style="font-size: 20px;"><a href="learngravity.html"><strong>LEARN GRAVITY</strong></a><br></p>
                             </div>
                         </div>
                     </div>
