--- a/eventapi/html/allevents/learngravity.html
+++ b/eventapi/html/allevents/learngravity.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Contact - Brand</title>
+    <title>Learn Gravity</title>
     <meta name="description" content="GW EINSTEIN">
     <link rel="icon" type="image/png" sizes="551x894" href="assets/img/PngItem_2522307.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -49,8 +49,9 @@
             <div class="container text-center">
                 <p class="text-left"><br><strong>Finding a ripple in spacetime</strong><br><br>In 1916, the year after correctly formulating the theory of general relativity, Albert Einstein predicted that accelerating masses create ripples that propagate through the fabric
                     of spacetime known as gravitational waves. However, these ripples are so unbelievably minuscule that Einstein himself thought they would never be detected. A century after this prediction, the Laser Interferometer Gravitational­-wave
-                    Observatory (LIGO) has made the first direct detection of this elusive phenomenon.<br><br></p><img src="https://panoptes-uploads.zooniverse.org/production/project_attached_image/0c518832-4d50-472f-9609-a3b6f4e51f7f.png">
-                <p class="text-left"><br>Though gravitational waves are invisible, they do have a measurable effect on the space they travel through by causing distances to shrink and stretch. The LIGO detectors in Livingston, Louisiana and Hanford, Washington utilize laser
+                    Observatory (LIGO) has made the first direct detection of this elusive phenomenon.<br><br></p><img src="https://panoptes-uploads.zooniverse.org/production/project_attached_image/0c518832-4d50-472f-9609-a3b6f4e51f7f.png" style="width: 700px;">
+                <p
+                    class="text-left"><br>Though gravitational waves are invisible, they do have a measurable effect on the space they travel through by causing distances to shrink and stretch. The LIGO detectors in Livingston, Louisiana and Hanford, Washington utilize laser
                     light as a very precise stopwatch to measure this effect. A&nbsp;<em>very</em>&nbsp;simplified diagram of the detectors is shown above. The detectors are identical Michelson interferometers, shooting powerful lasers down equal-length
                     cavities four kilometers in length. Since the speed of light is constant, if the race down the interferometer arms and back is a “tie” it means that the light traveled the exact same distance and the arms are exactly the same length.
                     LIGO is set up to have the beams destructively interfere in this case, resulting in no signal in the detectors. However, if one of these arms is stretched or shrunk, say by a gravitational wave, the race will not be a tie; the beam
@@ -59,13 +60,12 @@
                     shown below, plotted in a similar fashion as the images you will be looking at in this project. From this one discovery, we made the first detection of gravitational waves and binary black hole systems, and tested Einstein's relativity
                     to a whole new level. To learn more about this discovery, see&nbsp;<a href="https://www.youtube.com/watch?v=afugOlipGu4&amp;index=2&amp;list=PL8H5VdtDcAdZ10U73ryfmNWrfyziJ8Vfh">this video</a>&nbsp;that was made by collaborators on
                     this project.<br><br></p><img src="https://panoptes-uploads.zooniverse.org/production/project_attached_image/1802cdce-43f3-40fc-ae0e-8780d26d2e76.png">
-                <p class="text-left"><br>On December 26th 2015, LIGO also confirmed a second signal from a binary black hole inspiral. However, this new science has just begun and there are many more gravitational waves to discover.<strong>Glitches in the system</strong>LIGO
-                    is the most sensitive and complicated gravitational experiment ever built. To detect gravitational waves even from the strongest events in the Universe, LIGO needs to be able to know when the length of its 4-kilometer arms change by
-                    a distance 10,000 times smaller than the diameter of a proton! This makes LIGO susceptible to a great deal of instrumental and environmental sources of noise. Of particular concern are transient, poorly modeled artifacts known by the
-                    LIGO community as&nbsp;<em>glitches</em>. Though the reason for having two detectors separated by thousands of miles is to isolate the detectors from common sources of noise, glitches happen frequently enough that they often can be
-                    coincident in the two detectors and can mimic astrophysical signals. Classifying and characterizing glitches is imperative in the effort to target and eliminate these artifacts, paving the way for more astrophysical signals to be detected.<br></p>
-                <img
-                    src="https://panoptes-uploads.zooniverse.org/production/project_attached_image/f5687385-3fc9-46fb-a6b1-bc438535d4af.gif">
+                    <p class="text-left"><br>On December 26th 2015, LIGO also confirmed a second signal from a binary black hole inspiral. However, this new science has just begun and there are many more gravitational waves to discover.<strong>Glitches in the system</strong>LIGO
+                        is the most sensitive and complicated gravitational experiment ever built. To detect gravitational waves even from the strongest events in the Universe, LIGO needs to be able to know when the length of its 4-kilometer arms change
+                        by a distance 10,000 times smaller than the diameter of a proton! This makes LIGO susceptible to a great deal of instrumental and environmental sources of noise. Of particular concern are transient, poorly modeled artifacts known
+                        by the LIGO community as&nbsp;<em>glitches</em>. Though the reason for having two detectors separated by thousands of miles is to isolate the detectors from common sources of noise, glitches happen frequently enough that they often
+                        can be coincident in the two detectors and can mimic astrophysical signals. Classifying and characterizing glitches is imperative in the effort to target and eliminate these artifacts, paving the way for more astrophysical signals
+                        to be detected.<br></p><img src="https://panoptes-uploads.zooniverse.org/production/project_attached_image/f5687385-3fc9-46fb-a6b1-bc438535d4af.gif">
                     <p class="text-left"><br>Classifying glitches using computers has proven to be an exceedingly difficult task. A family of data analysis algorithms known as&nbsp;<em>machine learning</em>&nbsp;have made huge strides over the past decade in classification
                         problems, though they usually require a large pre-classified dataset to operate effectively. However, human intuition has proven time and time again to be a useful tool in pattern recognition problems such as this. One of the innovations
                         of this citizen science project is that citizen scientists and computer algorithms will work in a symbiotic relationship, helping one another to optimally classify and characterize glitches. The general workflow will be:<br>1.
