--- a/eventapi/html/allevents/infoLibrary.html
+++ b/eventapi/html/allevents/infoLibrary.html
@@ -59,7 +59,7 @@
                         <div class="card special-skill-item border-0">
                             <div class="card-header bg-transparent border-0"><img src="assets/img/unnamed.jpg" style="width: 220px;"></div>
                             <div class="card-body">
-                                <p class="text-center card-text" data-bs-hover-animate="bounce" style="font-size: 22px;"><br><a href="https://gracedb.ligo.org/superevents/public/O3/"><strong>PUBLIC ALERT BY LIGO (EXTERNAL DATA)</strong></a><br></p>
+                                <p class="text-center card-text" data-bs-hover-animate="bounce" style="font-size: 22px;"><a href="https://gracedb.ligo.org/superevents/public/O3/"><strong>PUBLIC ALERT BY LIGO (EXTERNAL DATA)</strong></a><br></p>
                             </div>
                         </div>
                     </div>
@@ -80,7 +80,7 @@
                         <div class="card special-skill-item border-0">
                             <div class="card-header bg-transparent border-0"><img src="assets/img/rjulve32747999-nasa01-estados-unidos-2016-fica-facilitada-181203134335-1543841131889.jpg" style="width: 220px;"></div>
                             <div class="card-body">
-                                <h3 class="card-title" data-bs-hover-animate="bounce" style="font-family: 'Abril Fatface', cursive;color: rgb(3,3,3);font-size: 20px;"><a href="https://play.google.com/store/apps/details?id=org.laserlabs.chirp"><strong>LIGO ANDROID</strong></a><br></h3>
+                                <h3 class="card-title" data-bs-hover-animate="bounce" style="font-family: 'Abril Fatface', cursive;color: rgb(3,3,3);font-size: 22px;"><a href="https://play.google.com/store/apps/details?id=org.laserlabs.chirp"><strong>LIGO ANDROID</strong></a><br></h3>
                                 <p class="card-text"><br></p>
                             </div>
                         </div>
@@ -88,14 +88,14 @@
                     <div class="col-md-4" style="font-family: 'Abril Fatface', cursive;">
                         <div class="card special-skill-item border-0">
                             <div class="card-header bg-transparent border-0"><img src="assets/img/rjulve32747999-nasa01-estados-unidos-2016-fica-facilitada-181203134335-1543841131889.jpg" style="width: 220px;"></div>
-                            <div class="card-body"><a class="card-link" href="https://www.ligo.org/sp/science/Publication-GW170817MMA/"><br><strong>BINARY SYSTEM OF NEUTRON STARS</strong><br></a></div>
+                            <div class="card-body d-xl-flex align-items-xl-start"><a class="card-link" href="https://www.ligo.org/sp/science/Publication-GW170817MMA/" style="font-size: 22px;"><strong>BINARY SYSTEM OF NEUTRON STARS</strong><br></a></div>
                         </div>
                     </div>
                     <div class="col-md-4" style="font-family: 'Abril Fatface', cursive;">
                         <div class="card special-skill-item border-0">
                             <div class="card-header bg-transparent border-0"><img src="assets/img/PngItem_2522307.png" style="width: 89px;"></div>
                             <div class="card-body">
-                                <p class="card-text" data-bs-hover-animate="bounce" style="font-size: 20px;"><a href="learngravity.html"><strong>LEARN GRAVITY</strong></a><br></p>
+                                <p class="card-text" data-bs-hover-animate="bounce" style="font-size: 20px;"><a href="learngravity.html" style="font-size: 22px;"><strong>LEARN GRAVITY</strong></a><br></p>
                             </div>
                         </div>
                     </div>
@@ -108,7 +108,7 @@
                         <div class="card special-skill-item border-0">
                             <div class="card-header bg-transparent border-0"><img src="assets/img/GWvisual.jpg" style="width: 197px;"></div>
                             <div class="card-body">
-                                <h3 data-bs-hover-animate="bounce" style="font-family: 'Abril Fatface', cursive;color: rgb(3,3,3);"><a href="https://spaceplace.nasa.gov/gravitational-waves/sp/" style="font-size: 20px;"><br>GRAVITATIONAL WAVES<br></a><br></h3>
+                                <h3 data-bs-hover-animate="bounce" style="font-family: 'Abril Fatface', cursive;color: rgb(3,3,3);"><a href="https://spaceplace.nasa.gov/gravitational-waves/sp/" style="font-size: 22px;"><br>GRAVITATIONAL WAVES<br></a><br></h3>
                                 <p class="card-text"><br></p>
                             </div>
                         </div>
@@ -117,14 +117,14 @@
                         <div class="card special-skill-item border-0">
                             <div class="card-header bg-transparent border-0"><img src="assets/img/1366_2000.jpg" style="width: 304px;"></div>
                             <div class="card-body">
-                                <p class="text-center card-text" data-bs-hover-animate="bounce"></p><a class="card-link" href="https://spaceplace.nasa.gov/supernova/en/" style="font-size: 20px;"><strong>SUPERNOVA</strong></a></div>
+                                <p class="text-center card-text" data-bs-hover-animate="bounce"></p><a class="card-link" href="https://spaceplace.nasa.gov/supernova/en/" style="font-size: 22px;"><strong>SUPERNOVA</strong></a></div>
                         </div>
                     </div>
                     <div class="col-md-4" style="font-family: 'Abril Fatface', cursive;">
                         <div class="card special-skill-item border-0">
                             <div class="card-header bg-transparent border-0"><img src="assets/img/electromagnetica.jpg" style="width: 220px;"></div>
                             <div class="card-body">
-                                <p class="card-text" data-bs-hover-animate="bounce"><a href="https://spaceplace.nasa.gov/magic-windows/en/" style="font-size: 20px;"><strong>ELECTROMAGNETIC SPECTRUM</strong></a><br></p>
+                                <p class="card-text" data-bs-hover-animate="bounce"><a href="https://spaceplace.nasa.gov/magic-windows/en/" style="font-size: 22px;"><strong>ELECTROMAGNETIC SPECTRUM</strong></a><br></p>
                             </div>
                         </div>
                     </div>
