--- a/eventapi/html/allevents/infoLibrary.html
+++ b/eventapi/html/allevents/infoLibrary.html
@@ -140,7 +140,7 @@
     <footer
         class="page-footer">
         <div class="container" style="font-family: Sriracha, cursive;">
-            <div class="links"><a href="../aboutus.html" style="font-family: 'Abril Fatface', cursive;">About us</a></div><a href="../contact.html">Contact with us</a>
+            <div class="links"><a href="aboutus.html" style="font-family: 'Abril Fatface', cursive;">About us</a></div><a href="contact.html">Contact with us</a>
             <div class="social-icons"></div>
         </div>
         </footer>
