--- a/eventapi/html/allevents/catalogue/einstein190814.html
+++ b/eventapi/html/allevents/catalogue/einstein190814.html
@@ -27,13 +27,13 @@
             <div
                 class="collapse navbar-collapse" id="navbarNav" style="font-family: Sriracha, cursive;">
                 <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="project.html">Project</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="../index.html">Home</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="../project.html">Project</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="https://www.ligo.org" target="_blank">LSC</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="https://www.ligo.caltech.edu" target="_blank">LIGO</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="https://www.gw-openscience.org/" target="_blank">GWOSC<br></a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="contact.html">Contact with us<br></a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="aboutus.html"><strong>About us</strong><br></a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="../contact.html">Contact with us<br></a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="../aboutus.html"><strong>About us</strong><br></a></li>
                 </ul>
         </div>
         </div>
@@ -85,7 +85,7 @@
     <footer
         class="page-footer">
         <div class="container" style="font-family: Sriracha, cursive;">
-            <div class="links"><a href="aboutus.html" style="font-family: 'Abril Fatface', cursive;">About us</a></div><a href="contact.html">Contact with us</a>
+            <div class="links"><a href="../aboutus.html" style="font-family: 'Abril Fatface', cursive;">About us</a></div><a href="../contact.html">Contact with us</a>
             <div class="social-icons"></div>
         </div>
         </footer>
