--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -78,13 +78,13 @@
                     </table>
                 </div>
             </div>
-            <div class="container text-center"><a class="btn btn-primary" role="button" href="downloadapp.html">Download App</a>
+            <div class="container text-center"><a class="btn btn-primary" role="button" href="downloadapp.html" style="font-size: 37px;">Download App</a>
                 <div class="table-responsive">
                     <table class="table">
                         <thead>
                             <tr>
-                                <th class="text-center"><a class="btn btn-primary" role="button" data-bs-hover-animate="shake" href="catalague.html">View Catalogue</a></th>
-                                <th class="text-center"><a class="btn btn-primary" role="button" data-bs-hover-animate="shake" href="games.html">Games Soon</a></th>
+                                <th class="text-center"><a class="btn btn-primary" role="button" data-bs-hover-animate="shake" href="catalague.html" style="font-size: 37px;">View Catalogue</a></th>
+                                <th class="text-center"><a class="btn btn-primary" role="button" data-bs-hover-animate="shake" href="games.html" style="font-size: 37px;">Games Soon</a></th>
                             </tr>
                         </thead>
                         <tbody>
