--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -63,12 +63,12 @@
         </section>
         <section class="portfolio-block call-to-action border-bottom" style="font-family: Sriracha, cursive;">
             <div class="container">
-                <div class="table-responsive">
+                <div class="table-responsive" style="width: 750;">
                     <table class="table">
                         <thead>
                             <tr>
-                                <th style="width: 224px;">Search information</th>
-                                <th class="text-center" style="width: 971px;"><input type="search" style="width: 900px;"></th>
+                                <th class="text-left">Search information</th>
+                                <th class="text-left"><input type="search" style="width: 750px;"></th>
                             </tr>
                         </thead>
                         <tbody>
@@ -78,24 +78,17 @@
                     </table>
                 </div>
             </div>
-            <div class="container text-center"><a class="btn btn-primary" role="button" href="downloadapp.html" style="font-size: 37px;">Download App</a>
-                <div class="table-responsive">
-                    <table class="table">
-                        <thead>
-                            <tr>
-                                <th class="text-center"><a class="btn btn-primary" role="button" data-bs-hover-animate="shake" href="catalague.html" style="font-size: 37px;">View Catalogue</a></th>
-                                <th class="text-center"><a class="btn btn-primary" role="button" data-bs-hover-animate="shake" href="games.html" style="font-size: 37px;">Games Soon</a></th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr></tr>
-                            <tr>
-                                <td></td>
-                                <td></td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
+            <div class="container text-center"><a class="btn btn-primary" role="button" href="downloadapp.html" style="font-size: 37px;">Download App</a></div>
+            <div class="container">
+                <p></p>
+            </div>
+            <div class="container text-center"><a class="btn btn-primary" role="button" data-bs-hover-animate="shake" href="catalague.html" style="font-size: 37px;">View Catalogue</a></div>
+            <div class="container">
+                <p></p>
+            </div>
+            <div class="container text-center"><a class="btn btn-primary" role="button" data-bs-hover-animate="shake" href="games.html" style="font-size: 37px;">Games Soon</a></div>
+            <div class="container">
+                <p></p>
             </div>
             <section class="portfolio-block photography">
                 <div class="container text-center">
