--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -78,7 +78,7 @@
                     </table>
                 </div>
             </div>
-            <div class="container text-center"><a class="btn btn-primary" role="button" href="downloadapp.html" style="font-size: 37px;">Download App</a></div>
+            <div class="container text-center"><a class="btn btn-primary" role="button" href="downloadapp.html" style="font-size: 37px;">Download App Soon</a></div>
             <div class="container">
                 <p></p>
             </div>
@@ -86,7 +86,7 @@
             <div class="container">
                 <p></p>
             </div>
-            <div class="container text-center"><a class="btn btn-primary" role="button" data-bs-hover-animate="shake" href="games.html" style="font-size: 37px;">Games Soon</a></div>
+            <div class="container text-center"><a class="btn btn-primary" role="button" data-bs-hover-animate="shake" href="games.html" style="font-size: 37px;">Games</a></div>
             <div class="container">
                 <p></p>
             </div>
