--- a/eventapi/html/allevents/games.html
+++ b/eventapi/html/allevents/games.html
@@ -42,7 +42,7 @@
         <section class="portfolio-block contact">
             <div class="container text-center">
                 <div class="heading">
-                    <h2>GAMES COMING SOON</h2>
+                    <h2>MORE GAMES COMING SOON</h2>
                 </div>
             </div>
             <div class="container text-center"><button class="btn btn-primary" type="button" style="font-size: 32px;">Play Now</button></div>
