--- a/eventapi/html/allevents/index.html
+++ b/eventapi/html/allevents/index.html
@@ -117,7 +117,7 @@
             <div class="container">
                 <div class="heading"></div>
             </div>
-            <div class="container text-center" style="font-family: Sriracha, cursive;"><a class="btn btn-primary" role="button" style="font-size: 37px;" href="infoLibrary.html">Info Library</a></div>
+            <div class="container text-center" style="font-family: Sriracha, cursive;"><a class="btn btn-primary" role="button" data-bs-hover-animate="pulse" style="font-size: 37px;" href="infoLibrary.html">Info Library</a></div>
         </section>
     </main>
     <section class="portfolio-block website gradient">
